increase branding margin

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -34,7 +34,7 @@ header {
   .branding {
     display: inline-block;
     height: 50%;
-    margin-left: 20px;
+    margin-left: 10%;
     font-size: 1.3em;
     margin-top: 10px;
     line-height: 26px;
