--- a/sass/style.scss
+++ b/sass/style.scss
@@ -179,6 +179,7 @@ h1 {
   padding: 20px;
   img {
     background-color: #2672ae;
+    border: 3px solid #2672ae;
   }
   button {
     background-color: white;
